remindme-db-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: remindme-db
  labels:
    app: remindme-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remindme-db
  template:
    metadata:
      labels:
        app: remindme-db
    spec:
      containers:
      - name: remindme-db
        image: remindme-db:0.0.1-RELEASE
        ports:
        - containerPort: 27017
