remindme-frontend-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: remindme-frontend
  labels:
    app: remindme-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remindme-frontend
  template:
    metadata:
      labels:
        app: remindme-frontend
    spec:
      containers:
      - name: remindme-frontend
        image: remindme-frontend:0.0.1-RELEASE
        ports:
        - containerPort: 80
