remindme-api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: remindme-api
spec:
  selector:
    app: remindme-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
