remindme-db-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: remindme-db
spec:
  selector:
    app: remindme-db
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
