remindme-frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: remindme-frontend
spec:
  selector:
    app: remindme-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
