remindme-notifier-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: remindme-notifier
spec:
  selector:
    app: remindme-notifier
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 8090
  type: ClusterIP
